--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ kotlinxJson = "1.7.1"
 # Other
 timber = "5.0.1"
 lottie = "6.6.2"
+composeMarkdown = "0.5.6"
 
 [libraries]
 
@@ -77,6 +78,7 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 # Other
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+compose-markdown = { module = "com.github.jeziellago:compose-markdown", version.ref = "composeMarkdown" }
 
 # Testing
 junit = { module = "junit:junit", version.ref = "junit" }
